item flattening pt. 1

--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -42,26 +42,16 @@ item.sapturretmod:turret_assembly_filter.ttip=Used in the Turret Assembly Table
 item.sapturretmod:turret_assembly_filter.conf=Configured
 item.sapturretmod:turret_assembly_filter.inst=Right-click to configure, Shift-right-click to clear config.
 # Ammo
-item.sapturretmod:turret_ammo.arrow.name=Arrow Bolt
-item.sapturretmod:turret_ammo.arrow_pack.name=Arrow Bolt Pack
-item.sapturretmod:turret_ammo.shotgun_shell.name=Shotgun Shell
-item.sapturretmod:turret_ammo.shotgun_shell_pack.name=Shotgun Shell Pack
-item.sapturretmod:turret_ammo.cryocell_1.name=Cryo Cell SG1
-item.sapturretmod:turret_ammo.cryocell_pack_1.name=Cryo Cell SN1 Pack
-item.sapturretmod:turret_ammo.cryocell_2.name=Cryo Cell SG2
-item.sapturretmod:turret_ammo.cryocell_pack_2.name=Cryo Cell SN2 Pack
-item.sapturretmod:turret_ammo.cryocell_3.name=Cryo Cell SG3
-item.sapturretmod:turret_ammo.cryocell_pack_3.name=Cryo Cell SN3 Pack
-item.sapturretmod:turret_ammo.bullet.name=Revolver Bullets
-item.sapturretmod:turret_ammo.bullet_pack.name=Revolver Bullet Pack
-item.sapturretmod:turret_ammo.minigun_shell.name=Minigun Rounds
-item.sapturretmod:turret_ammo.minigun_shell_pack.name=Minigun Rounds Pack
-item.sapturretmod:turret_ammo.eleccell.name=Electrolyte Cell
-item.sapturretmod:turret_ammo.eleccell_pack.name=Electrolyte Cell Pack
-item.sapturretmod:turret_ammo.fluxcell.name=Flux Cell
-item.sapturretmod:turret_ammo.fluxcell_pack.name=Flux Cell Pack
-item.sapturretmod:turret_ammo.fueltank.name=Fuel Tank
-item.sapturretmod:turret_ammo.fueltank_pack.name=Fuel Tank Pack
+item.sapturretmod:ammo.arrow.name=Arrow Bolt
+item.sapturretmod:ammo.shotgunshell.name=Shotgun Shell
+item.sapturretmod:ammo.cryocell.1.name=Cryo Cell SG1
+item.sapturretmod:ammo.cryocell.2.name=Cryo Cell SG2
+item.sapturretmod:ammo.cryocell.3.name=Cryo Cell SG3
+item.sapturretmod:ammo.bullet.name=Revolver Bullets
+item.sapturretmod:ammo.minigunshell.name=Minigun Rounds
+item.sapturretmod:ammo.eleccell.name=Electrolyte Cell
+item.sapturretmod:ammo.fluxcell.name=Flux Cell
+item.sapturretmod:ammo.fueltank.name=Fuel Tank
 # Repair Kits
 item.sapturretmod:turret_repair_kit.standard_1.name=Repair Kit 05HS
 item.sapturretmod:turret_repair_kit.standard_2.name=Repair Kit 10HS
