--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -130,9 +130,10 @@ gui.sapturretmod.tcu.label.shield_pers_recv=Pers. Shield: Recovering %s
 gui.sapturretmod.tcu.label.shield_turret=Shield: %s
 gui.sapturretmod.tcu.label.shield_turret_recv=Shield: Recovering %s
 gui.sapturretmod.tcu.page.title.info=Turret Info
-gui.sapturretmod.tcu.page.title.targets_creature=Entity Target Settings
-gui.sapturretmod.tcu.page.title.targets_player=Player Target Settings
-gui.sapturretmod.tcu.page.title.targets_smart=Smart Target Settings
+gui.sapturretmod.tcu.page.title.targets.creature=Entity Target Settings
+gui.sapturretmod.tcu.page.title.targets.player=Player Target Settings
+gui.sapturretmod.tcu.page.title.targets.smart=Smart Target Settings
+gui.sapturretmod.tcu.page.title.colorizer=Shield Color Settings
 gui.sapturretmod.tcu.page.title.upgrades=Upgrades
 gui.sapturretmod.tcu.button.dismantle=Dismantle Turret
 gui.sapturretmod.tcu.button.activate=Activate Turret
