* added ammo cartridge GUI  * electrolyte generator GUI now uses GUI JSON from SanLib  * some code refactoring

--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -179,6 +179,8 @@ gui.sapturretmod.tassembly.rfUsing=using %d RF/t
 # Generator
 gui.sapturretmod.electrogen.effective=Effectiveness:
 gui.sapturretmod.electrogen.powergen=Power generated:
+# Ammo Cartridge
+container.sapturretmod.ammo_cartridge=Ammunition Cartridge
 
 #### Subtitles ####
 subtitles.sapturretmod.turretIdle=Turret idles
