* recode of electrolyte generator recipes, they're now accessible via the API  * boosted output of ammo recipes  * "effectiveness" is now called "efficiency"  * assembly recipes can now be removed via the API  * electrolyte generator recipes can now define their own trash/treasure chances

--- a/src/main/resources/assets/sapturretmod/lang/en_us.lang
+++ b/src/main/resources/assets/sapturretmod/lang/en_us.lang
@@ -177,7 +177,7 @@ gui.sapturretmod.tassembly.group.ammo=Ammunition
 gui.sapturretmod.tassembly.group.repkit=Repair Kits
 gui.sapturretmod.tassembly.group.upgrades=Upgrades
 # Generator
-gui.sapturretmod.electrogen.effective=Effectiveness:
+gui.sapturretmod.electrogen.efficiency=Efficiency:
 gui.sapturretmod.electrogen.powergen=Power generated:
 # Ammo Cartridge
 container.sapturretmod.ammo_cartridge=Ammunition Cartridge
